Fix Dimension on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -74,3 +74,9 @@ button {
     cursor: not-allowed;
   }
 }
+@media (max-width: 400px) {
+  #app {
+    align-self: stretch;
+    margin: var(--size-03);
+  }
+}
